# Pattern_Recognition_PCF

./: CMakeLists.txt  README.md
CUDA/: PatternRecognition.cu  PatternRecognition.h  Utils.h  check_correctness.cu  main.cu
cpp/: Matrix.h  PatternRecognition.h  Utils.h  check_correctness.cpp  main.cpp
